[package]
name = "magnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun = { version = "0.6", features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
packet = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"